api clean up and documentation