@@ -83,17 +83,19 @@ public class AsTest {
 
 	@Test
 	public void asGenericMonad() {
-		val list = As.<List<Integer>,Stream>asMonad(Stream.of(Arrays.asList(1,3)))
-				.flatMap(Collection::stream).<Stream<Integer>>unwrap()
+		
+		val list = As.<Stream<Integer>,List<Integer>>asMonad(Stream.of(Arrays.asList(1,3)))
+				.<Stream<Integer>,Integer>flatMap(Collection::stream)
 				.map(i->i*2)
 				.peek(System.out::println)
-				.collect(Collectors.toList());
+				.toList();
 		assertThat(Arrays.asList(2,6),equalTo(list));
 	}
 	@Test
 	public void testMixed() {
-		val list = As.<List<Integer>,Stream>asMonad(Stream.of(Arrays.asList(1,3)))
-				.bind(Optional::of).<Stream<List<Integer>>>unwrap()
+		val list = As.<Stream<List<Integer>>,List<Integer>>asMonad(Stream.of(Arrays.asList(1,3)))
+				.bind(Optional::of)
+				.unwrap()
 				.map(i->i.size())
 				.peek(System.out::println)
 				.collect(Collectors.toList());
